--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^9.1.3",
     "babel-loader": "^8.0.0-beta.6",
     "clean-dir": "^1.0.3",
+    "cssnano": "^4.1.7",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
