--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "google-fonts-plugin": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.3",
